--- a/nw.js/example/package.json
+++ b/nw.js/example/package.json
@@ -1,4 +1,13 @@
 {
   "name": "nw-demo",
-  "main": "index.html"
+  "main": "index.html",
+  "scripts": {
+    "watch": "watchify main.js -o browserify-bundle.js -d -v",
+    "build": "browserify main.js -o browserify-bundle.js -d"
+  },
+  "dependencies": {
+    "browserify": "^11.2.0",
+    "react": "^0.13.3",
+    "watchify": "^3.4.0"
+  }
 }
