--- a/nw.js/example/package.json
+++ b/nw.js/example/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "browserify": "^11.2.0",
+    "es6-promisify": "^3.0.0",
     "react": "^0.13.3",
     "watchify": "^3.4.0"
   }
