--- a/js/eslint/.eslintrc
+++ b/js/eslint/.eslintrc
@@ -16,17 +16,14 @@
             2,
             "never"
         ],
-        "no-console": 1,
-        "semi": 0
+        "no-console": 1
     },
     "env": {
         "es6": true,
-        "browser": true,
-        "commonjs": true
+        "browser": true
     },
     "extends": "eslint:recommended",
-    "ecmaFeatures": {
-        "jsx": true,
-        "experimentalObjectRestSpread": true
+    "parserOptions": {
+        "sourceType": "module"
     }
 }
