Experiments with arrow functions and block scope

--- a/Exo-1-es6/package.json
+++ b/Exo-1-es6/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "npm run start-server & npm run gulp",
+    "start": "npm run gulp",
     "start-server": "python -m SimpleHTTPServer 3000",
     "gulp": "gulp"
   },
