Added moment and console.log days of commits

--- a/Exo-donut-dix-novembre/package.json
+++ b/Exo-donut-dix-novembre/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "d3-shape": "^1.0.3",
+    "moment": "^2.16.0",
     "rollupify": "^0.3.5"
   },
   "devDependencies": {
