Commit before pause

--- a/exam_gui/package.json
+++ b/exam_gui/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "d3-shape": "^1.0.3",
     "moment": "^2.16.0",
     "rollupify": "^0.3.5"
   }
