--- a/js/data/package.json
+++ b/js/data/package.json
@@ -8,5 +8,10 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "d3-shape": "^1.0.3",
+    "moment": "^2.16.0",
+    "rollupify": "^0.3.5"
+  }
 }
