des trucs en plus

--- a/donut/package.json
+++ b/donut/package.json
@@ -1,7 +1,7 @@
 {
   "name": "donut",
   "version": "1.0.0",
-  "description": "",
+  "description": "Projet Donet !",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "browserify": "^13.1.1",
+    "d3-shape": "^1.0.3",
     "moment": "^2.16.0",
     "rollupify": "^0.3.5"
   }
