--- a/js/data/FinancialTimes_Bram-van-osta/package.json
+++ b/js/data/FinancialTimes_Bram-van-osta/package.json
@@ -17,6 +17,7 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "d3-shape": "^1.0.3"
+    "d3-shape": "^1.0.3",
+    "moment": "^2.16.0"
   }
 }
