--- a/exo-js/package.json
+++ b/exo-js/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "browserify": "^13.1.1",
+    "d3-shape": "^1.0.3",
+    "moment": "^2.16.0",
     "rollupify": "^0.3.5"
   }
 }
